[gd_scene load_steps=6 format=3 uid="uid://qk17oqtdr44n"]

[ext_resource type="Script" uid="uid://bkvvcwuacs1fp" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://dj47wc5nnm06h" path="res://scenes/world_0.tscn" id="2_8ln24"]
[ext_resource type="PackedScene" uid="uid://ck71e5phsxvxj" path="res://objects/vehicles/vimana_j/vimana_j.tscn" id="3_8ln24"]
[ext_resource type="PackedScene" uid="uid://bokx8wuhvb2hd" path="res://objects/vehicles/vimana_h/vimana_h.tscn" id="4_rtw2f"]
[ext_resource type="PackedScene" uid="uid://cg1rl1irjyc6q" path="res://objects/vehicles/vimana_lvd/vimana_lvd.tscn" id="5_oa1go"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")
world = ExtResource("2_8ln24")
jet = ExtResource("3_8ln24")
heli = ExtResource("4_rtw2f")
lvd = ExtResource("5_oa1go")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="SelectLabel" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Select Vehicle"
horizontal_alignment = 1

[node name="ButtonJet" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Jet Vimana"

[node name="ButtonHeli" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Heli Vimana"

[node name="ButtonLvD" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LvD Vimana"

[node name="ExitButton" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Exit"

[node name="HostButton" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="IPField" type="LineEdit" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "localhost"

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
